cmake_minimum_required(VERSION 2.6)
FIND_PACKAGE(Protobuf REQUIRED)
MESSAGE(STATUS "Using protobuf ${protobuf_VERSION}")

FIND_PACKAGE(GRPC REQUIRED)
MESSAGE(STATUS "Using gRPC ${gRPC_VERSION}")

SET(PROTO_SRC_DIR ${CMAKE_CURRENT_BINARY_DIR}/proto-src)
FILE(MAKE_DIRECTORY ${PROTO_SRC_DIR})
INCLUDE_DIRECTORIES(${PROTO_SRC_DIR})

PROTOBUF_GENERATE_CPP(PROTO_SRCS PROTO_HDRS ${PROTO_SRC_DIR} ${PROTOS})
GRPC_GENERATE_CPP(GRPC_SRCS GRPC_HDRS ${PROTO_SRC_DIR} ${PROTOS})
MESSAGE(${GRPC_HDRS})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/thridpart)
LINK_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

SET(CMAKE_SOURCE_DIR .)
SET(CMAKE_MODULE_PATH ${CMAKE_ROOT}/Modules ${CMAKE_SOURCE_DIR}/cmake/Modules
                ${PROJECT_SOURCE_DIR}/Modules)

configure_file (
	"${PROJECT_SOURCE_DIR}/src/Version.hpp.in"	
	"${PROJECT_SOURCE_DIR}/src/Version.hpp"	
)

SET(GEO_SRC geo.cpp
	BootStrap.cpp	
	App.cpp	
	AdServer.cpp
	Http.cpp
	Http/HttpInterface.cpp
	Http/Server.cpp
	Http/Index.cpp
	McProcessor.cpp
	Timer.cpp
	Grpc.cpp
	Grpc/ServerServiceImpl.cpp
	${PROTO_SRCS}
	${GRPC_SRCS}
	App/IpUtils.cpp
	App/IpSearch.cpp
	Grpc/IpSearchServiceImpl.cpp
)
ADD_EXECUTABLE(geo ${GEO_SRC})

# adbase
FIND_PACKAGE( libadbase REQUIRED)
MARK_AS_ADVANCED(
LIBADBASE_INCLUDE_DIR
LIBADBASE_LIBRARIES
)
IF (LIBADBASE_INCLUDE_DIR AND LIBADBASE_LIBRARIES)
    MESSAGE(STATUS "Found libadbase libraries")
    INCLUDE_DIRECTORIES(${LIBADBASE_INCLUDE_DIR})
    MESSAGE( ${LIBADBASE_LIBRARIES} )
    TARGET_LINK_LIBRARIES(geo ${LIBADBASE_LIBRARIES} )
ELSE (LIBADBASE_INCLUDE_DIR AND LIBADBASE_LIBRARIES)
    MESSAGE(FATAL_ERROR "Failed to find libadbase libraries")
ENDIF (LIBADBASE_INCLUDE_DIR AND LIBADBASE_LIBRARIES)

TARGET_LINK_LIBRARIES(geo libevent.a rt libz.a dl)

TARGET_LINK_LIBRARIES(geo grpc++_reflection libgrpc++_unsecure.a libgrpc++.a libgrpc.a libz.a libprotobuf.a ssl crypto)

# pthread
FIND_PACKAGE( libpthread REQUIRED)
MARK_AS_ADVANCED(
LIBPTHREAD_INCLUDE_DIR
LIBPTHREAD_LIBRARIES
)
IF (LIBPTHREAD_INCLUDE_DIR AND LIBPTHREAD_LIBRARIES)
    MESSAGE(STATUS "Found libpthread libraries")
    INCLUDE_DIRECTORIES(${LIBPTHREAD_INCLUDE_DIR})
    MESSAGE( ${LIBPTHREAD_LIBRARIES} )
    TARGET_LINK_LIBRARIES(geo ${LIBPTHREAD_LIBRARIES} )
ELSE (LIBPTHREAD_INCLUDE_DIR AND LIBPTHREAD_LIBRARIES)
    MESSAGE(FATAL_ERROR "Failed to find libpthread libraries")
ENDIF (LIBPTHREAD_INCLUDE_DIR AND LIBPTHREAD_LIBRARIES)

INSTALL(TARGETS geo RUNTIME DESTINATION bin)
